# TabCausal

./: .gitignore  README.md  pyproject.toml  requirements.txt
baselines/: README.md  __init__.py  registry.py  run_paper_baselines.py
baselines/paper_algorithms/: metrics.py  preprocess.py  run_avici.py  run_cdis.py  run_dagma.py  run_das.py  run_dcdi.py  run_gies.py  run_igsp.py  run_lingam.py  run_nodags.py  run_notears.py  run_notears_mlp.py  run_pc.py  run_randomregress.py  run_sdcd.py  run_sea.py
baselines/paper_algorithms/avici_official/: requirements.txt  setup.py
baselines/paper_algorithms/avici_official/avici/: buffer.py  pretrain.py  train.py
baselines/paper_algorithms/cdis/: FCI_tools.py  __init__.py  cdis_func.py  main.py
baselines/paper_algorithms/dodiscover/: _version.py
baselines/paper_algorithms/notears/: __init__.py  linear.py
baselines/paper_algorithms/sea-reproduce/: environment.yml
data_engine/: README.md
data_engine/configs/bench/: gp_hard.yaml  gp_simple.yaml  linear_gauss.yaml  linear_nongauss.yaml
data_engine/pfn_engine/: __init__.py  pfn_dataset.py
examples/: README.md  make_example_data.py  minimal_predict.py
scripts/: check_baseline_environment.py  compare_suite_statistics.py  evaluate_benchmark_suite.py  evaluate_directory.py  generate_benchmark_suite.py  smoke_paper_baselines.py  visualize_evaluation.py  visualize_prediction.py
tabcausal/: __init__.py  cli.py  evaluate.py  inference.py  metrics.py  preprocessing.py
tabcausal/model/: __init__.py  causal_model.py  encoder.py  heads.py
(+53 files in other folders)
